crates/musq/tests/trybuild/fail_sql_too_many.stderr
error: unused positional arguments
 --> tests/trybuild/fail_sql_too_many.rs:4:13
  |
4 |     let _ = sql!("SELECT {}", 1, 2)?;
  |             ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sql` (in Nightly builds, run with -Z macro-backtrace for more info)
