crates/musq/tests/trybuild/fail_sql_too_many.rs
use musq::*;

fn main() -> musq::Result<()> {
    let _ = sql!("SELECT {}", 1, 2)?;
    Ok(())
}
